Add chat send box elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <div class="chat-box-container chat-send-box">
-            
+            <span class="icon-octo"></span>
+            <input type="text" class="txt-chat" placeholder="Your message here"/>
+            <button class="btn-send">SEND</button>
         </div>
         <div class="chat-box-container chat-msg-box">
             
