--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             <button class="btn-send">SEND</button>
         </div>
         <div class="chat-box-container chat-msg-box">
-            
+            <p class="refresh-box">
+                <button class="btn-refresh">REFRESH</button>
+            </p>
         </div>
         <script src="js/index.js"></script>
     </body>
