add float left to every chat box container and wrap with main container

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
         <link href="styles/index.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div class="chat-box-container chat-send-box">
-            <span class="icon-octo"></span>
-            <input type="text" class="txt-chat" placeholder="Your message here"/>
-            <button class="btn-send">SEND</button>
-        </div>
-        <div class="chat-box-container chat-msg-box">
-            <p class="refresh-box">
-                <button class="btn-refresh">REFRESH</button>
-            </p>
+        <div class="chat-container-main">
+            <div class="chat-box-container chat-send-box">
+                <span class="icon-octo"></span>
+                <input type="text" class="txt-chat" placeholder="Your message here"/>
+                <button class="btn-send">SEND</button>
+            </div>
+            <div class="chat-box-container chat-msg-box">
+                <p class="refresh-box">
+                    <button class="btn-refresh">REFRESH</button>
+                </p>
+            </div>
         </div>
         <script src="js/index.js"></script>
     </body>
