introduce html reset

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="styles/html5reset-1.6.1.css" rel="stylesheet" type="text/css">
         <link href="styles/index.css" rel="stylesheet" type="text/css">
     </head>
     <body>
