--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
                 <p class="refresh-box">
                     <button class="btn-refresh">REFRESH</button>
                 </p>
+                <ul class="chat-msg-list">
+                    <li>
+                        <img class="user-icon" src="img/user-icon.png" >
+                        <div class="msg-detail">
+                            <p class="user-info">
+                                <span class="user-name">Pussaaon</span>
+                                <span class="send-time">22.00pm</span>
+                            </p>
+                            <p class="msg">
+                                "message go here message go here message go here message go here message go here message go here message "
+                            </p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
         <script src="js/index.js"></script>
