--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="styles/html5reset-1.6.1.css" rel="stylesheet" type="text/css">
         <link href="styles/index.css" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div class="chat-container-main">
