add jquery and bind data from json to the msg list

--- a/index.html
+++ b/index.html
@@ -17,21 +17,11 @@
                     <button class="btn-refresh">REFRESH</button>
                 </p>
                 <ul class="chat-msg-list">
-                    <li>
-                        <img class="user-icon" src="img/user-icon.png" >
-                        <div class="msg-detail">
-                            <p class="user-info">
-                                <span class="user-name">Pussaaon</span>
-                                <span class="send-time">22.00pm</span>
-                            </p>
-                            <p class="msg">
-                                "message go here message go here message go here message go here message go here message go here message "
-                            </p>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </div>
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.min.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
